; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/qlnx/qlnxe/extr_ecore_l2.c_ecore_sp_update_mcast_bin.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/qlnx/qlnxe/extr_ecore_l2.c_ecore_sp_update_mcast_bin.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vport_update_ramrod_data = type { %struct.TYPE_3__, %struct.TYPE_4__ }
%struct.TYPE_3__ = type { i32* }
%struct.TYPE_4__ = type { i32 }
%struct.ecore_sp_vport_update_params = type { i32*, i32 }

@ETH_MULTICAST_MAC_BINS_IN_REGS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.vport_update_ramrod_data*, %struct.ecore_sp_vport_update_params*)* @ecore_sp_update_mcast_bin to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ecore_sp_update_mcast_bin(%struct.vport_update_ramrod_data* %0, %struct.ecore_sp_vport_update_params* %1) #0 {
  %3 = alloca %struct.vport_update_ramrod_data*, align 8
  %4 = alloca %struct.ecore_sp_vport_update_params*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  store %struct.vport_update_ramrod_data* %0, %struct.vport_update_ramrod_data** %3, align 8
  store %struct.ecore_sp_vport_update_params* %1, %struct.ecore_sp_vport_update_params** %4, align 8
  %7 = load %struct.vport_update_ramrod_data*, %struct.vport_update_ramrod_data** %3, align 8
  %8 = getelementptr inbounds %struct.vport_update_ramrod_data, %struct.vport_update_ramrod_data* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  %10 = call i32 @OSAL_MEMSET(i32** %9, i32 0, i32 8)
  %11 = load %struct.ecore_sp_vport_update_params*, %struct.ecore_sp_vport_update_params** %4, align 8
  %12 = getelementptr inbounds %struct.ecore_sp_vport_update_params, %struct.ecore_sp_vport_update_params* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 8
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %16, label %15

15:                                               ; preds = %2
  br label %44

16:                                               ; preds = %2
  %17 = load %struct.vport_update_ramrod_data*, %struct.vport_update_ramrod_data** %3, align 8
  %18 = getelementptr inbounds %struct.vport_update_ramrod_data, %struct.vport_update_ramrod_data* %17, i32 0, i32 1
  %19 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %18, i32 0, i32 0
  store i32 1, i32* %19, align 8
  store i32 0, i32* %5, align 4
  br label %20

20:                                               ; preds = %41, %16
  %21 = load i32, i32* %5, align 4
  %22 = load i32, i32* @ETH_MULTICAST_MAC_BINS_IN_REGS, align 4
  %23 = icmp slt i32 %21, %22
  br i1 %23, label %24, label %44

24:                                               ; preds = %20
  %25 = load %struct.ecore_sp_vport_update_params*, %struct.ecore_sp_vport_update_params** %4, align 8
  %26 = getelementptr inbounds %struct.ecore_sp_vport_update_params, %struct.ecore_sp_vport_update_params* %25, i32 0, i32 0
  %27 = load i32*, i32** %26, align 8
  store i32* %27, i32** %6, align 8
  %28 = load i32*, i32** %6, align 8
  %29 = load i32, i32* %5, align 4
  %30 = sext i32 %29 to i64
  %31 = getelementptr inbounds i32, i32* %28, i64 %30
  %32 = load i32, i32* %31, align 4
  %33 = call i32 @OSAL_CPU_TO_LE32(i32 %32)
  %34 = load %struct.vport_update_ramrod_data*, %struct.vport_update_ramrod_data** %3, align 8
  %35 = getelementptr inbounds %struct.vport_update_ramrod_data, %struct.vport_update_ramrod_data* %34, i32 0, i32 0
  %36 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %35, i32 0, i32 0
  %37 = load i32*, i32** %36, align 8
  %38 = load i32, i32* %5, align 4
  %39 = sext i32 %38 to i64
  %40 = getelementptr inbounds i32, i32* %37, i64 %39
  store i32 %33, i32* %40, align 4
  br label %41

41:                                               ; preds = %24
  %42 = load i32, i32* %5, align 4
  %43 = add nsw i32 %42, 1
  store i32 %43, i32* %5, align 4
  br label %20

44:                                               ; preds = %15, %20
  ret void
}

declare dso_local i32 @OSAL_MEMSET(i32**, i32, i32) #1

declare dso_local i32 @OSAL_CPU_TO_LE32(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
